# icfpc2020

./: .gitmodules  CMakeLists.txt  build.sh  run.sh
.github/workflows/: c-cpp.yml
src/: BigInt.cpp  BigInt.hpp  CMakeLists.txt  CmakeLists.txt  Commands.cpp  Commands.hpp  Converter.hpp  GameResponse.cpp  GameResponse.hpp  GameState.cpp  GameState.hpp  Modulation.cpp  Modulation.hpp  Ship.cpp  Ship.hpp  ShipAndCommands.cpp  ShipAndCommands.hpp  StaticGameInfo.cpp  StaticGameInfo.hpp  Transceiver.cpp  Transceiver.hpp  Vector.cpp  Vector.hpp  main.cpp
src/BasicOrbitAlgo/: BasicOrbitAlgo.cpp  BasicOrbitAlgo.hpp  CMakeLists.txt
src/Vector/: CMakeLists.txt  Vector.hpp
src/helper/: CMakeLists.txt  helper.hpp
src/modulation/: CMakeLists.txt  Modulation.cpp  Modulation.hpp
tests/: CMakeLists.txt  OrbitAlgo.cpp  modulation.cpp  modulationSpec.cpp
